# shady-walks

./: LICENSE  README.md  index.html  pyproject.toml  shade_map_visualizer.py
.github/workflows/: deploy.yml
gpx/: 20240611.gpx  20240716.gpx  20240717.gpx  20240718.gpx  20240802.gpx
shady_walks/: shade_map_visualizer.py
workflows/: deploy.yml
