[tool.poetry]
name = "shade-heatmap-generator"
version = "0.1.0"
description = "A tool to generate heatmaps of shady areas from GPX files"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "shade_heatmap_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
folium = "^0.14.0"
branca = "^0.6.0"
numpy = "^1.22.0"
scipy = "^1.10.0"
geopy = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
